--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title></title><link href=/static/css/app.411ccd4c54579350fe32066e0b3c675b.css rel=stylesheet></head><body class=dark-mode><div id=app></div><script type=text/javascript src=/static/js/manifest.a1c64d31eab75d6204d3.js></script><script type=text/javascript src=/static/js/vendor.afb39384bd201b4c40f3.js></script><script type=text/javascript src=/static/js/app.e272d588f9e31f251fdf.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name="HandheldFriendly" content="true" />
+		<meta name="format-detection" content="telephone=no" />
+		<meta name="robots" content="index, follow" />
+		<meta property="og:locale" content="vi_VN"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Chienlove Repo"/>
+        <meta property="og:description" content="Kho lưu trữ tweak vh miễn phí."/>
+        <meta property="og:url" content="https://chienlove.github.io/"/>
+        <meta property="og:site_name" content="CHIENLOVE.GITHUB.IO"/>
+        <meta property="og:image" content="https://chienlove.github.io/images/chienlove_repo.png"/>
+        <meta property="og:image:secure_url" content="https://chienlove.github.io/images/chienlove_repo.png"/>
+
+		<meta name="title" content="Chienlove Repo" />
+		<meta name="description" content="Kho lưu trữ tweak việt hoá miễn phí" />
+		<meta name ="keywords" content="chienlove.github.io, appcuios.tk, chienlove repo, tweak VH, Chienlove ios, iphone, ipad, jailbreak, ios, apple" /><title></title><link href=/static/css/app.411ccd4c54579350fe32066e0b3c675b.css rel=stylesheet></head><body class=dark-mode><div id=app></div><script type=text/javascript src=/static/js/manifest.a1c64d31eab75d6204d3.js></script><script type=text/javascript src=/static/js/vendor.afb39384bd201b4c40f3.js></script><script type=text/javascript src=/static/js/app.e272d588f9e31f251fdf.js></script></body></html>
 <script data-ad-client="ca-pub-3905625903416797" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
