--- a/description.html
+++ b/description.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Chienlove Repo</title><link href=/static/css/app.411ccd4c54579350fe32066e0b3c675b.css rel=stylesheet><script data-ad-client="ca-pub-3905625903416797" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><div class="gooWidget google-ad-leaderboard">
-                 <div class="advertisement-text">Advertisement</div>
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- ads download -->
-    <ins class="adsbygoogle adslot"
-     style="display:inline-block"
-     data-ad-client="ca-pub-3905625903416797"
-     data-ad-slot="5160182988"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script></head><body class=dark-mode><div id=app></div><script type=text/javascript src=/static/js/manifest.a1c64d31eab75d6204d3.js></script><script type=text/javascript src=/static/js/vendor.afb39384bd201b4c40f3.js></script><script type=text/javascript src=/static/js/app.e272d588f9e31f251fdf.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Chienlove Repo</title><link href=/static/css/app.411ccd4c54579350fe32066e0b3c675b.css rel=stylesheet><script data-ad-client="ca-pub-3905625903416797" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script></head><body class=dark-mode><div id=app></div><script type=text/javascript src=/static/js/manifest.a1c64d31eab75d6204d3.js></script><script type=text/javascript src=/static/js/vendor.afb39384bd201b4c40f3.js></script><script type=text/javascript src=/static/js/app.e272d588f9e31f251fdf.js></script></body></html>
