--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1">
+   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({
+google_ad_client: "ca-pub-3905625903416797",
+enable_page_level_ads: true,
+overlays: {bottom: true}
+});
+</script>
 <meta name="HandheldFriendly" content="true" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="robots" content="index, follow" />
@@ -14,11 +22,4 @@
 		<meta name="title" content="Chienlove" />
 		<meta name="description" content="Kho lưu trữ cho Cydia & Sileo" />
 		<meta name ="keywords" content="chienlove.github.io, appcuios.tk, chienlove repo, tweak, tools, iphone, ipad, jailbreak, ios, apple, appcuios, chienlove" />
-<title>Chienlove Repo</title><link href=/static/css/app.411ccd4c54579350fe32066e0b3c675b.css rel=stylesheet></head><body class=dark-mode><div id=app></div><script type=text/javascript src=/static/js/manifest.a1c64d31eab75d6204d3.js></script><script type=text/javascript src=/static/js/vendor.afb39384bd201b4c40f3.js></script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({
-google_ad_client: "ca-pub-3905625903416797",
-enable_page_level_ads: true,
-overlays: {bottom: true}
-});
-</script></body></html>
+<title>Chienlove Repo</title><link href=/static/css/app.411ccd4c54579350fe32066e0b3c675b.css rel=stylesheet></head><body class=dark-mode><div id=app></div><script type=text/javascript src=/static/js/manifest.a1c64d31eab75d6204d3.js></script><script type=text/javascript src=/static/js/vendor.afb39384bd201b4c40f3.js></script></body></html>
