--- a/index.html
+++ b/index.html
@@ -14,4 +14,11 @@
 		<meta name="title" content="Chienlove" />
 		<meta name="description" content="Kho lưu trữ cho Cydia & Sileo" />
 		<meta name ="keywords" content="chienlove.github.io, appcuios.tk, chienlove repo, tweak, tools, iphone, ipad, jailbreak, ios, apple, appcuios, chienlove" />
-<title>Chienlove Repo</title><link href=/static/css/app.411ccd4c54579350fe32066e0b3c675b.css rel=stylesheet></head><body class=dark-mode><div id=app></div><script type=text/javascript src=/static/js/manifest.a1c64d31eab75d6204d3.js></script><script type=text/javascript src=/static/js/vendor.afb39384bd201b4c40f3.js></script><script type=text/javascript src=/static/js/app.e272d588f9e31f251fdf.js></script><script data-ad-client="ca-pub-3905625903416797" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script></body></html>
+<title>Chienlove Repo</title><link href=/static/css/app.411ccd4c54579350fe32066e0b3c675b.css rel=stylesheet></head><body class=dark-mode><div id=app></div><script type=text/javascript src=/static/js/manifest.a1c64d31eab75d6204d3.js></script><script type=text/javascript src=/static/js/vendor.afb39384bd201b4c40f3.js></script><script type=text/javascript src=/static/js/app.e272d588f9e31f251fdf.js></script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({
+google_ad_client: "ca-pub-3905625903416797",
+enable_page_level_ads: true,
+overlays: {bottom: true}
+});
+</script></body></html>
